--- a/admin.html
+++ b/admin.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>SGS Admin Panel</title>
-    <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="css/auth.css">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="auth.css">
 </head>
 <body>
     <div id="adminLogin" class="login-container">
@@ -64,6 +64,6 @@
 
     </div>
 
-    <script src="js/admin.js"></script>
+    <script src="admin.js"></script>
 </body>
 </html>
