--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
             const sphereMaterial = new THREE.MeshPhongMaterial({
                 color: 0x3498db,
                 transparent: true,
-                opacity: 0.9,
+                opacity: 0.1,
                 shininess: 100,
                 wireframe: false
             });
@@ -261,7 +261,7 @@
             // Add small circles on the sphere surface
             const circleGeometry = new THREE.SphereGeometry(0.05, 16, 16);
             const circleMaterial = new THREE.MeshPhongMaterial({ 
-                color: 0xff7e5f,
+                color: 0xff7e5f00,
                 shininess: 100 
             });
             
