--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 circle.position.multiplyScalar(1.05);
                 sphere.add(circle);
 
-                randomIndex = Math.floor(Math.random() * array.length);
+                randomIndex = Math.floor(Math.random() * photos.length);
                 circle.INNERHTML = `<img src="${photos[randomIndex]}">`
 
             }
