--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         .controls {
             position: absolute;
-            bottom: 30px;
+            bottom: 100px;
             left: 50%;
             transform: translateX(-50%);
             background: rgba(0, 0, 0, 0.6);
@@ -278,7 +278,7 @@
             const sphereMaterial = new THREE.MeshPhongMaterial({
                 color: 0x3498db,
                 transparent: true,
-                opacity: 0.9,
+                opacity: 0.2,
                 shininess: 100,
                 wireframe: false
             });
@@ -286,89 +286,172 @@
             sphere = new THREE.Mesh(sphereGeometry, sphereMaterial);
             scene.add(sphere);
 
-            // Add small circles on the sphere surface
-            const circleGeometry = new THREE.SphereGeometry(0.05, 16, 16);
-            const circleMaterial = new THREE.MeshPhongMaterial({
-                color: 0xff7e5f,
-                shininess: 100
+            // Array to store all texture promises
+            const texturePromises = photos.map(photo => {
+                return new Promise((resolve) => {
+                    createCircularImageTexture(photo, resolve);
+                });
             });
 
-            // Create a texture loader
-            const textureLoader = new THREE.TextureLoader();
+            // When all textures are loaded
+            Promise.all(texturePromises).then(textures => {
+                for (let i = 0; i < 50; i++) {
+                    const randomIndex = Math.floor(Math.random() * textures.length);
+                    const texture = textures[randomIndex];
 
-            // Replace the circle creation loop with this:
-            for (let i = 0; i < 50; i++) {
-                // Load your image (replace 'path/to/image.jpg' with your image path)
-                const randomIndex = Math.floor(Math.random() * photos.length);
-                const texture = textureLoader.load(photos[randomIndex]);
+                    const spriteMaterial = new THREE.SpriteMaterial({
+                        map: texture,
+                        transparent: true,
+                        opacity: 0.9
+                    });
 
-                // Create sprite material with the image texture
-                const spriteMaterial = new THREE.SpriteMaterial({
-                    map: texture,
-                    transparent: true,
-                    opacity: 0.9
-                });
+                    const sprite = new THREE.Sprite(spriteMaterial);
+                    sprite.scale.set(0.2, 0.2, 1);
 
-                // Create sprite
-                const sprite = new THREE.Sprite(spriteMaterial);
-                sprite.scale.set(0.2, 0.2, 1); // Adjust size as needed
+                    const phi = Math.acos(-1 + (2 * i) / 50);
+                    const theta = Math.sqrt(50 * Math.PI) * phi;
 
-                // Position on sphere surface (same as before)
-                const phi = Math.acos(-1 + (2 * i) / 50);
-                const theta = Math.sqrt(50 * Math.PI) * phi;
+                    sprite.position.set(
+                        Math.sin(phi) * Math.cos(theta),
+                        Math.sin(phi) * Math.sin(theta),
+                        Math.cos(phi)
+                    );
 
-                sprite.position.set(
-                    Math.sin(phi) * Math.cos(theta),
-                    Math.sin(phi) * Math.sin(theta),
-                    Math.cos(phi)
+                    sprite.position.multiplyScalar(1.05);
+                    sphere.add(sprite);
+                }
+            });
+        }
+
+        // Add this helper function to create circular image textures
+        function createCircularImageTexture(imagePath, callback) {
+            const canvas = document.createElement('canvas');
+            canvas.width = 256;
+            canvas.height = 256;
+            const ctx = canvas.getContext('2d');
+
+            const img = new Image();
+            img.crossOrigin = "Anonymous"; // Important for loading external images
+            img.src = imagePath;
+
+            img.onload = function() {
+                // Clear canvas
+                ctx.clearRect(0,
+                    0,
+                    canvas.width,
+                    canvas.height);
+
+                // Create circular clipping path
+                ctx.beginPath();
+                ctx.arc(128,
+                    128,
+                    128,
+                    0,
+                    Math.PI * 2);
+                ctx.closePath();
+                ctx.clip();
+
+                // Calculate aspect-correct dimensions
+                const hRatio = canvas.width / img.width;
+                const vRatio = canvas.height / img.height;
+                const ratio = Math.min(hRatio,
+                    vRatio);
+                const centerShiftX = (canvas.width - img.width * ratio) / 2;
+                const centerShiftY = (canvas.height - img.height * ratio) / 2;
+
+                // Draw image centered and scaled to fit circle
+                ctx.drawImage(
+                    img,
+                    0,
+                    0,
+                    img.width,
+                    img.height,
+                    centerShiftX,
+                    centerShiftY,
+                    img.width * ratio,
+                    img.height * ratio
                 );
 
-                // Scale to make them sit on the surface
-                sprite.position.multiplyScalar(1.05);
-                scene.add(sprite);
-            }
+                // Return texture via callback
+                callback(new THREE.CanvasTexture(canvas));
+            };
+
+            img.onerror = function() {
+                console.error("Error loading image: " + imagePath);
+                // Fallback to colored circle
+                ctx.beginPath();
+                ctx.arc(128,
+                    128,
+                    128,
+                    0,
+                    Math.PI * 2);
+                ctx.fillStyle = '#ff7e5f';
+                ctx.fill();
+                callback(new THREE.CanvasTexture(canvas));
+            };
         }
 
         // Add lights to the scene
         function addLights() {
             // Ambient light
-            const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
+            const ambientLight = new THREE.AmbientLight(0xffffff,
+                0.4);
             scene.add(ambientLight);
 
             // Directional lights
-            const light1 = new THREE.DirectionalLight(0xff7e5f, 0.8);
-            light1.position.set(5, 5, 5);
+            const light1 = new THREE.DirectionalLight(0xff7e5f,
+                0.8);
+            light1.position.set(5,
+                5,
+                5);
             scene.add(light1);
 
-            const light2 = new THREE.DirectionalLight(0x3498db, 0.8);
-            light2.position.set(-5, -5, -5);
+            const light2 = new THREE.DirectionalLight(0x3498db,
+                0.8);
+            light2.position.set(-5,
+                -5,
+                -5);
             scene.add(light2);
 
             // Point light
-            const pointLight = new THREE.PointLight(0xffffff, 1, 100);
-            pointLight.position.set(0, 0, 5);
+            const pointLight = new THREE.PointLight(0xffffff,
+                1,
+                100);
+            pointLight.position.set(0,
+                0,
+                5);
             scene.add(pointLight);
         }
 
         // Set up event listeners
         function setupEventListeners() {
             // Mouse events for desktop
-            renderer.domElement.addEventListener('mousedown', onMouseDown);
-            renderer.domElement.addEventListener('mousemove', onMouseMove);
-            renderer.domElement.addEventListener('mouseup', onMouseUp);
-            renderer.domElement.addEventListener('mouseleave', onMouseUp);
-            renderer.domElement.addEventListener('wheel', onMouseWheel);
+            renderer.domElement.addEventListener('mousedown',
+                onMouseDown);
+            renderer.domElement.addEventListener('mousemove',
+                onMouseMove);
+            renderer.domElement.addEventListener('mouseup',
+                onMouseUp);
+            renderer.domElement.addEventListener('mouseleave',
+                onMouseUp);
+            renderer.domElement.addEventListener('wheel',
+                onMouseWheel);
 
             // Touch events for mobile
-            renderer.domElement.addEventListener('touchstart', onTouchStart);
-            renderer.domElement.addEventListener('touchmove', onTouchMove);
-            renderer.domElement.addEventListener('touchend', onTouchEnd);
+            renderer.domElement.addEventListener('touchstart',
+                onTouchStart);
+            renderer.domElement.addEventListener('touchmove',
+                onTouchMove);
+            renderer.domElement.addEventListener('touchend',
+                onTouchEnd);
 
             // Tap/click to pause/play
-            renderer.domElement.addEventListener('click', toggleRotation);
+            renderer.domElement.addEventListener('click',
+                toggleRotation);
 
             // Window resize
-            window.addEventListener('resize', onWindowResize);
+            window.addEventListener('resize',
+                onWindowResize);
         }
 
         // Mouse down handler
